# health-care

./: docker-compose.yml  package.json  pnpm-lock.yaml
client/apps/find-my-doc/src-tauri/: Cargo.toml  tauri.conf.json
client/apps/pi-health-mobile/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
client/apps/rx-website/src-tauri/: Cargo.toml  tauri.conf.json
server/: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile.doc_server  env.example  package.json
server/appointment/: Cargo.toml
server/appointment/src/domain/: appointment_aggregate.rs  appointment_commands.rs  appointment_domain.rs  appointment_events.rs  mod.rs
server/appointment/src/dto/: appointment_add.rs  appointment_choose_type.rs  appointment_delete.rs  appointment_update.rs  appointment_visit_type.rs  mod.rs
server/auth/: Cargo.toml
server/auth/src/domain/: auth_aggregate.rs  auth_commands.rs  auth_domain.rs  auth_events.rs  mod.rs
server/auth/src/dto/: authenticate_user.rs  login_mobile.rs  mod.rs
server/common/: Cargo.toml
server/common/src/: lib.rs  stream.rs
server/common/src/domain/: address.rs  appointment_duration_range.rs  contact.rs  date_of_birth.rs  deleted.rs  email.rs  email_or_mobile.rs  emergency_access.rs  encrypted_string.rs  fax.rs  goverment.rs  locked.rs  min_max_words.rs  mobile.rs  mod.rs  name.rs  non_empty_vec.rs  password.rs  photo_url.rs  reminder.rs  required_string.rs  required_struct.rs  url.rs  user.rs  zip.rs
server/common/src/dto/: address.rs  contact.rs  datatable.rs  doctor_details.rs  drugs.rs  filter.rs  gender.rs  gov_info.rs  icd.rs  id.rs  last_updated_input.rs  location.rs  mod.rs  org_details.rs  org_name.rs  org_user.rs  role.rs  search_query.rs  status.rs  systemadmin_details.rs  types.rs  user.rs  user_role.rs  version.rs
server/db_services/: Cargo.toml
server/db_services/src/: lib.rs
server/db_services/src/services/: addhistorical.rs  administer.rs  allergies.rs  appointment.rs  doctor.rs  familyhistory.rs  hospitalization.rs  implantabledevices.rs  medication.rs  mod.rs  notadminister.rs  notes.rs  obandpregnancy.rs  order.rs  organization.rs  pastmedicalhistory.rs  pastsurgicalhistory.rs  patient.rs  prescription.rs  problem.rs  servicelocation.rs  socialhistory.rs  staff.rs  systemadmin.rs  user.rs  vitals.rs
server/db_services/src/tables/: mod.rs  organization.rs  servicelocation.rs  systemadmin.rs
server/doc_server/: Cargo.toml
server/doc_server/src/: auth_rpc_handler.rs  clients.rs  compaction.rs  health_check.rs  main.rs  medicine_prediction.rs  metrics.rs  phone_code.rs  rpc_handler.rs  server.rs
server/doctor/: Cargo.toml
server/doctor/src/domain/: doctor.rs  doctor_aggregate.rs  doctor_commands.rs  doctor_domain.rs  doctor_events.rs  mod.rs
server/doctor/src/dto/: doctor_add.rs  doctor_delete.rs  doctor_type.rs  doctor_update.rs  mod.rs
server/features/: Cargo.toml
server/features/src/: lib.rs
server/features/src/setup/: dev_setup.rs  mod.rs  prod_setup.rs  set_up.rs  stag_setup.rs  test_setup.rs
server/features/src/tests/: appointment_aggregate_test.rs  mod.rs
server/meili_server/: Cargo.toml
server/meili_server/src/: helper.rs  main.rs
server/meta/: Cargo.toml
server/meta/bindings/bindings/: Login.ts  Roles.ts
server/meta/migrations/: 20240409123549_drugs.sql  20240410054109_doctors.sql  20240410054117_clients.sql  20240410054122_users.sql
server/meta/src/: auth.rs  clients.rs  main.rs  server.rs
server/meta/src/apis/: api_error.rs  mod.rs
server/meta/src/dto/: clients.rs  doctors.rs  drugs.rs  login.rs  mod.rs  users.rs
server/meta/src/meili_queries/: api.rs  helper.rs
server/ml/: Cargo.toml
server/ml/src/: lib.rs  medicine_prediction.rs
server/organization/: Cargo.toml
server/organization/src/domain/: mod.rs  organization_aggregate.rs  organization_commands.rs  organization_domain.rs  organization_events.rs
server/organization/src/dto/: csv.rs  mod.rs  organization_add.rs  organization_by_id.rs  organization_delete.rs  organization_update.rs  select_organization.rs
server/patient/: Cargo.toml
server/patient/src/domain/: mod.rs  patient.rs  patient_aggregate.rs  patient_commands.rs  patient_domain.rs  patient_events.rs
server/patient/src/dto/: mod.rs
server/prescription/: Cargo.toml
server/prescription/src/domain/: mod.rs  prescription_aggregate.rs  prescription_commands.rs  prescription_domain.rs  prescription_events.rs
server/prescription/src/dto/: mod.rs  prescription_add.rs  prescription_delete.rs  prescription_update.rs
server/servicelocation/: Cargo.toml
server/servicelocation/src/domain/: mod.rs  service_location_aggregate.rs  service_location_commands.rs  service_location_domain.rs  service_location_events.rs
server/servicelocation/src/dto/: mod.rs  select_servicelocation.rs  servicelocation_add.rs  servicelocation_delete.rs  servicelocation_update.rs
server/services/: Cargo.toml
server/services/src/: app_state.rs  get_organization_id.rs  lib.rs  rpc.rs
server/services/src/apis/: mod.rs
server/services/src/auth/: auth_services.rs
server/services/src/doc/: disease_prediction.rs  medicine_prediction.rs  mod.rs
server/services/src/method/: convention.rs  mod.rs
server/staff/: Cargo.toml
server/statics/admin/: index.html
server/statics/clinic/: index.html
server/statics/data/: allergy.csv  country_and_phone_code.csv  doctor.json  locations.csv  vaccine.csv
server/statics/health_check/: index.html
server/statics/ml/: diseases.txt  diseases_symptoms.txt  generics.txt  symptoms.txt  symptoms_data_numeric.csv  symptoms_full_num.csv
server/system_admin/: Cargo.toml
server/test_apis/: Cargo.toml
server/test_apis/src/: appointments.rs  doctor_services.rs  helper.rs  lib.rs  organizations.rs  patient_services.rs  prescription.rs  servicelocation.rs  start.rs  systemadmin.rs
server/user/: Cargo.toml
server/utils/: Cargo.toml
server/utils/src/: env_helper.rs  helper.rs  lib.rs  nanoid_helper.rs  password_helper.rs  path_helper.rs  read_json_helper.rs  store_helper.rs  validation_helper.rs
(+753 files in other folders)
