[package]
name = "doc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0"
actix-web-httpauth = "0"
actix-cors = "0"
actix-governor = "0"
rand = "0"
cosmo_store = { git = "https://github.com/deepsodha/cosmo_store-rs" }
cosmo_store_util = { git = "https://github.com/deepsodha/cosmo_store-rs" }
dotenv = "0"
cosmo_store_sqlx_sqlite = { git = "https://github.com/deepsodha/cosmo_store-rs" }
actix-web-lab = { version = "0", features = ["spa"] }
serde_json = "1.0"
anyhow = "1"
biscuit-auth = "4"
biscuit-actix-middleware = { git = "https://github.com/biscuit-auth/biscuit-actix-middleware" }
validator = { version = "0", features = ["derive"] }
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }

#tokio
tokio = { version = "1", features = ["fs"] }
log = "0"
env_logger = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }
tracing-log = "0"
csv = "1"


# Dependencies
services = {path = "../services"}
features = {path = "../features"}
utils = {path = "../utils"}
ml = {path = "../ml"}

# [dev-dependencies]
# actix-http-test = "3.0.0-beta.13"
# actix-rt = "2"
