[package]
name = "meili_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = "0.25.0"
futures = "0.3" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0"

utils = {path = "../utils"}
common = {path = "../common"}