[package]
name = "meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0"
actix-web-httpauth = "0"
actix-cors = "0"
actix-governor = "0"
anyhow = "1"
env_logger = "0"
dotenv = "0"
meilisearch-sdk = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3" 
validator = { version = "0", features = ["derive"] }
thiserror = "1"
biscuit-auth = "4"
biscuit-actix-middleware = { git = "https://github.com/biscuit-auth/biscuit-actix-middleware" }
log = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }
tracing-log = "0"
ts-rs = {git = "https://github.com/Aleph-Alpha/ts-rs.git", features = ["serde-compat", "uuid-impl","chrono-impl",] }
sqlx = { version = "0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "json",
] }
utils = {path = "../utils"}
auth = {path = "../auth"}
common = {path = "../common"}
services = {path = "../services"}