[package]
name = "ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rustlearn = "0.5.0"
polars = { version = "0.38.3", features = ["lazy"] }
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1"