[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmo_store_sqlx_sqlite = { git = "https://github.com/deepsodha/cosmo_store-rs" }
cosmo_store = { git = "https://github.com/deepsodha/cosmo_store-rs" }
cosmo_store_util = { git = "https://github.com/deepsodha/cosmo_store-rs" }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0", features = ["serde"] }
#json

serde = { version = "1", features = ["derive"] }
serde_json = "1"

#validator
validator = { version = "0", features = ["derive"] }
anyhow = "1"
sqlx = { version = "0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "json",
] }

log = "0"
dotenv = "0"

ml = {path = "../ml"}
common = {path = "../common"}
appointment = {path = "../appointment"}
doctor = {path = "../doctor"}
organization = {path = "../organization"}
prescription = {path = "../prescription"}
patient = {path = "../patient"}
auth = {path = "../auth"}
system_admin = {path = "../system_admin"}
utils = {path = "../utils"}
db_services = {path = "../db_services"}
servicelocation = {path = "../servicelocation"}
staff = {path = "../staff"}
user = {path = "../user"}
biscuit-auth = "4"
csv = "1"
ts-rs = {git = "https://github.com/Aleph-Alpha/ts-rs.git", features = ["serde-compat", "uuid-impl","chrono-impl",] }

[dev-dependencies]
tempfile = "3"
actix-rt = "2"
