[package]
name = "test_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# web client 
reqwest = { version = "0", features = ["json"] }
#json
fake = { version = "2", features = ['derive', 'chrono', 'http'] }
services = { path = "../services" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = {  version = "0", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0"
log = "0"


features = {path ="../features"}
common = {path = "../common"}
appointment = {path = "../appointment"}
doctor = {path = "../doctor"}
organization = {path = "../organization"}
prescription = {path = "../prescription"}
patient = {path = "../patient"}
db_services = {path = "../db_services"}
system_admin = {path = "../system_admin"}
servicelocation = {path = "../servicelocation"}