[package]
name = "pi-health-mobile"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pi_health_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
bytes = "1"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0"
env_logger = "0"
tokio = { version = "1", features = ["full"] }
rand = "0"
cosmo_store = { git = "https://github.com/deepsodha/cosmo_store-rs" }
cosmo_store_util = { git = "https://github.com/deepsodha/cosmo_store-rs" }
dotenv = "0"
cosmo_store_sqlx_sqlite = { git = "https://github.com/deepsodha/cosmo_store-rs" }
anyhow = "1"
biscuit-auth = "4"
biscuit-actix-middleware = { git = "https://github.com/biscuit-auth/biscuit-actix-middleware" }
validator = { version = "0", features = ["derive"] }
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }


utils = {path = "../../../../server/utils"}
services = {path = "../../../../server/services"}
features = {path = "../../../../server/features"}
